# bevy_event_bus

./: .gitignore  Cargo.toml  LICENSE  README.md  run_performance_tests.py  run_performance_tests.sh
bevy_event_bus_derive/: Cargo.toml
bevy_event_bus_derive/src/: lib.rs
src/: app_ext.rs  bus_message.rs  decoder.rs  error.rs  errors.rs  event.rs  kafka.rs  lib.rs  plugin.rs  registration.rs  runtime.rs
src/backends/: backend_resource.rs  event_bus_backend.rs  kafka_backend.rs  mod.rs  redis_backend.rs
src/config/: core.rs  kafka.rs  markers.rs  mod.rs  redis.rs
src/plugins/event_bus/: messages.rs  mod.rs  plugin.rs  setup.rs  systems.rs
src/plugins/event_bus/resources/: consumer.rs  lifecycle.rs  mod.rs  topology.rs
src/readers/: bus_message_reader.rs  event_bus_reader.rs  kafka.rs  mod.rs  redis.rs
src/resources/: backend_metadata.rs  mod.rs  topology_registry.rs  types.rs
src/resources/types/: base.rs  kafka.rs  mod.rs  redis.rs
src/writers/: event_bus_writer.rs  kafka.rs  mod.rs  outbound_bridge.rs  redis.rs
tests/: integration_tests.rs
tests/common/: backend_factory.rs  events.rs  helpers.rs  mock_backend.rs  mod.rs  redis_setup.rs  setup.rs
tests/integration/: background_queue_tests.rs  basic.rs  configuration_tests.rs  dual_writer_bridge.rs  error_handling_tests.rs  error_handling_tests_old.rs  exactly_once_delivery.rs  external_only_tests.rs  frame_limits.rs  future-test-cases.txt  idle_read.rs  internal_events_tests.rs  kafka_metadata_validation.rs  metadata_tests.rs  mod.rs  multi_consumer_group_tests.rs  multi_decoder.rs  multi_topic.rs  multi_type.rs  offset_configuration.rs  ordering.rs  performance_tests.rs  temp.rs
tests/integration/common/: basic.rs  error_handling_tests.rs  external_only_tests.rs  mod.rs
tests/integration/kafka/: background_queue_tests.rs  basic.rs  bounded_read.rs  complex_topology.rs  configuration_tests.rs  consumer_group_semantics.rs  delivery_failure.rs  dual_writer_bridge.rs  error_handling_tests.rs  exactly_once_delivery.rs  external_only_tests.rs  frame_limits.rs  idle_read.rs  kafka_metadata_validation.rs  metadata_tests.rs  mod.rs  multi_consumer_group_tests.rs  multi_decoder.rs  multi_topic.rs  multi_type.rs  offset_configuration.rs  ordering.rs  performance_tests.rs
tests/integration/redis/: background_queue_tests.rs  basic.rs  bounded_read.rs  broadcast_separate_backends.rs  complex_topology.rs  configuration_tests.rs  consumer_group_semantics.rs  consumer_lag_tests.rs  delivery_failure.rs  dual_writer_bridge.rs  exactly_once_delivery.rs  frame_limits.rs  idle_read.rs  manual_ack.rs  mod.rs  multi_consumer_group_tests.rs  multi_stream.rs  multi_type.rs  ordering.rs  performance_tests.rs  start_id_behavior.rs  stream_trim.rs  test_basic_multi_type.rs  test_coordinated_consumer_names.rs  test_without_consumer_names.rs  topology_consumer_group_validation.rs  working_consumer_patterns.rs
tests/utils/: events.rs  helpers.rs  kafka_setup.rs  mock_backend.rs  mod.rs  performance.rs  redis_setup.rs  setup.rs
