[package]
name = "bevy_event_bus"
version = "0.1.0"
edition = "2024"
description = "A Bevy plugin that connects Bevy's event system to external message brokers like Kafka"
license-file = "LICENSE"
repository = "https://github.com/JViggiani/bevy_event_bus"
homepage = "https://github.com/JViggiani/bevy_event_bus"
documentation = "https://docs.rs/bevy_event_bus"
readme = "README.md"
keywords = ["bevy", "kafka", "events", "messaging", "gamedev"]
categories = ["game-development", "development-tools", "network-programming", "asynchronous"]
authors = ["Josh Viggiani"]

[features]
default = ["kafka"]
kafka = ["rdkafka"]

[dependencies]
async-trait = "0.1.89"
bevy = { version = "0.16.1", default-features = false }
bevy_event_bus_derive = "0.1.0"
ctor = "0.5.0"
once_cell = "1.21.3"
rdkafka = { version = "0.38.0", features = ["ssl"], optional = true }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.143"
thiserror = "2.0.16"
tracing = "0.1.41"
futures-util = "0.3"
tokio = { version = "1.47.1", features = ["full"] }
crossbeam-channel = "0.5.15"

[dev-dependencies]
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
